// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders custom component 1`] = `
<div
  className="box-header with-border"
>
  <div />
</div>
`;

exports[`renders default 1`] = `
<div
  className="box-header"
>
  <div />
</div>
`;
